--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,73 +1,59 @@
-# Tmux Personal Configuration
-
-# remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
-
-# reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
-
-# switch panes using Alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-
-# Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
-# don't rename windows automatically
-#set-option -g allow-rename off
+unbind C-Space
+# bind c-Space send-prefix
+set -g prefix C-Space
 
-# Enable swapping windows
-bind -r "Left" swap-window -d -t -1
-bind -r "Right" swap-window -d -t +1
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# Scripts
-bind-key -r i run-shell "tmux neww ~/github_EzLucca/Dotfiles/scripts/cht.sh"
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
-# DESIGN TWEAKS
+#set -g status off
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-window on
+set-option -g status-position top
+# List of plugins
 
-# don't do anything when a 'bell' rings
-set -g visual-activity off
-set -g visual-bell off
-set -g visual-silence off
-setw -g monitor-activity off
-set -g bell-action none
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'catppuccin/tmux#v2.1.2'
+set -g @plugin 'catppuccin/tmux'
 
-# clock mode
-setw -g clock-mode-colour colour1
+set -ogq @catppuccin_status_left_separator ""
+set -ogq @catppuccin_status_middle_separator ""
+set -ogq @catppuccin_status_right_separator "█"
+set -g @catppuccin_window_number_position "right"
 
-# copy mode
-setw -g mode-style 'fg=colour1 bg=colour18 bold'
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
 
-# pane borders
-set -g pane-border-style 'fg=colour1'
-set -g pane-active-border-style 'fg=colour3'
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
 
-# statusbar
-set -g status-position bottom
-set -g status-justify left
-set -g status-style 'fg=colour1'
-set -g status-left ''
-set -g status-right '%Y-%m-%d %H:%M '
-set -g status-right-length 50
-set -g status-left-length 10
+set -g @catppuccin_status_modules_right "directory user host sess"
+set -g @catppuccin_status_left_separator " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
 
-setw -g window-status-current-style 'fg=colour0 bg=colour1 bold'
-setw -g window-status-current-format ' #I #W #F '
+#set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+#set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
-setw -g window-status-style 'fg=colour1 dim'
-setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1]#F '
+set -g @catppuccin_flavour 'mocha' # latte or frappe, macchiato, mocha
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
 
-setw -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
-
-# messages
-set -g message-style 'fg=colour2 bg=colour0 bold'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
