--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
 set -g mouse on
 
+set-option -g default-shell /usr/bin/fish
+
 unbind C-Space
 # bind c-Space send-prefix
 set -g prefix C-Space
@@ -20,35 +22,13 @@ set-option -g renumber-window on
 set-option -g status-position top
 # List of plugins
 
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 #set -g @plugin 'catppuccin/tmux#v2.1.2'
 set -g @plugin 'catppuccin/tmux'
 
-set -ogq @catppuccin_status_left_separator ""
-set -ogq @catppuccin_status_middle_separator ""
-set -ogq @catppuccin_status_right_separator "█"
-set -g @catppuccin_window_number_position "right"
-
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_right "directory user host sess"
-set -g @catppuccin_status_left_separator " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-#set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
-#set -g @plugin 'arcticicestudio/nord-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g @catppuccin_flavour 'mocha' # latte or frappe, macchiato, mocha
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
