--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,39 +1,51 @@
+##### GENERAL SETTINGS #####
 set -g mouse on
-
-set-option -g default-shell /usr/bin/fish
+set -g history-limit 10000
+set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 unbind C-Space
-# bind c-Space send-prefix
 set -g prefix C-Space
 
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+##### STATUS BAR #####
+set -g status on
+set -g status-interval 5
+set -g status-justify centre
+set -g status-left-length 60
+set -g status-right-length 90
+set-option -g status-position top
+
+# Colors
+set -g status-style fg=colour240,bg=colour234
+set -g status-left '#[fg=colour10]#S #[fg=colour244]| #[fg=colour245]%Y-%m-%d #[fg=colour250]%H:%M '
+set -g status-right '#[fg=colour245]#(whoami) #[fg=colour244]| %a %H:%M #[fg=colour240]| #[fg=colour39]#(uptime | cut -d "," -f 1)'
+
+##### WINDOW & PANE STYLE #####
+setw -g window-status-format " #I #W "
+setw -g window-status-current-format "#[fg=colour223,bold]#[bg=colour31] #I #[fg=colour231]#W #[default]"
+setw -g window-status-style bg=default,fg=colour244
+setw -g window-status-current-style bg=colour31,fg=white
+
+set -g pane-border-style fg=colour237
+set -g pane-active-border-style fg=colour45
+set -g message-style fg=colour232,bg=colour190
+
+##### WINDOWS MOVEMENT #####
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-#set -g status off
-set -g base-index 1
-set -g pane-base-index 1
-set-window-option -g pane-base-index 1
-set-option -g renumber-window on
-set-option -g status-position top
-# List of plugins
+##### TPM (Plugin Manager) #####
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'jimeh/tmux-themepack'
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'catppuccin/tmux#v2.1.2'
-set -g @plugin 'catppuccin/tmux'
+# Theme (optional)
+# set -g @themepack 'powerline/default/blue'
 
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# Initialize TPM
+# run '~/.tmux/plugins/tpm/tpm'
