--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,8 @@ set -g status-justify centre
 set -g status-left-length 60
 set -g status-right-length 90
 set-option -g status-position top
+set -g base-index 1
+setw -g pane-base-index 1
 
 # Colors
 set -g status-style fg=colour240,bg=colour234
