--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,8 +23,8 @@ setw -g pane-base-index 1
 
 # Colors
 set -g status-style fg=colour240,bg=colour234
-set -g status-left ' #[fg=colour245]%Y-%m-%d #[fg=colour250]%H:%M '
-set -g status-right '#[fg=colour245]#(whoami) #[fg=colour244]| %a %H:%M #[fg=colour240]| #[fg=colour65]#(uptime | cut -d "," -f 1)'
+set -g status-left ' #[fg=colour245]%Y-%m-%d '
+set -g status-right '#[fg=colour245]#(whoami) #[fg=colour244]| %a #[fg=colour240]| #[fg=colour65]#(uptime | cut -d "," -f 1)'
 
 ##### WINDOW & PANE STYLE #####
 setw -g window-status-format " #I #W "
