--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,9 +22,9 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Colors
-set -g status-style fg=colour240,bg=colour234
-set -g status-left ' #[fg=colour245]%Y-%m-%d '
-set -g status-right '#[fg=colour245]#(whoami) #[fg=colour244]| %a #[fg=colour240]| #[fg=colour65]#(uptime | cut -d "," -f 1)'
+set -g status-style fg=colour250,bg=colour234
+set -g status-left ' #[fg=colour65]%Y-%m-%d | %a #[fg=colour65]|'
+set -g status-right '#[fg=colour65]#(whoami) #[fg=colour65] | #[fg=colour65]#(date +%R)'
 
 ##### WINDOW & PANE STYLE #####
 setw -g window-status-format " #I #W "
