changed tmux and startup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 ##### STATUS BAR #####
-set -g status on
+set -g status off
 set -g status-interval 5
 set -g status-justify centre
 set -g status-left-length 60
@@ -42,3 +42,7 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
+# Toggle status bar on/off
+bind-key b run-shell "tmux show -g status | grep -q off && tmux set -g status on || tmux set -g status off"
+
