--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set -g mouse on
 set -g history-limit 10000
 set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-set-option -g default-shell /usr/bin/fish
+set-option -g default-shell /usr/bin/bash
 bind c new-window -c "#{pane_current_path}"
 
 unbind C-Space
