--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 ##### STATUS BAR #####
-set -g status off
+set -g status on
 set -g status-interval 5
 set -g status-justify centre
 set -g status-left-length 60
@@ -44,5 +44,5 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 # Toggle status bar on/off
-bind-key b run-shell "tmux show -g status | grep -q off && tmux set -g status on || tmux set -g status off"
+# bind-key b run-shell "tmux show -g status | grep -q off && tmux set -g status on || tmux set -g status off"
 
